<resources>
    <string name="app_name">TechStore</string>
    <string name="login_prompt">Please scan your user ID</string>
    <string name="login_error">Incorrect user ID!</string>

    <!--<string name="title_activity_main">MainActivity</string>-->
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_barcode_capture">Barcode Capture</string>
    <string name="title_activity_zbar">ZBar Scanner</string>
    <string name="title_activity_zxing">ZXing Scanner</string>

    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
<!--
    <string name="barcode_header">Click "Read Barcode" to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="toggle_flash">Flash</string>
-->
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="barcode_unknown">"Error interpreting barcode"</string>

    <string name="activity_goods_issue">Goods Issue</string>
    <string name="activity_goods_return">Goods Return</string>
    <string name="activity_inventory">Inventory</string>
    <string name="activity_display">Display Results</string>

    <string name="text_status">Records:\t</string>
    <string name="file_name">scandata.txt</string>
    <string name="directory_error">Directory not created</string>
    <string name="file_error">Cannot create file</string>
    <string name="storage_error">External storage not writable</string>
    <string name="success">Success</string>
    <string name="cancelled">Cancelled</string>

    <string name="action_save">Save</string>
    <string name="action_switch">Switch</string>
    <string name="save_failure">Please complete data entry</string>

    <string name="work_order_empty">Enter either Work Order or Cost Center</string>
    <string name="work_order_length">Work Order should be 10 digits</string>
    <string name="cost_center_length">Cost Center should be 7 to 10 characters</string>
    <string name="inventory_length">Inventory document number should be 9 digits</string>
    <string name="material_empty">Enter material number</string>
    <string name="material_length">Material number should be 9 digits</string>
    <string name="plant_empty">Enter plant code</string>
    <string name="plant_length">Plant code should be 4 characters</string>
    <string name="storage_location_empty">Enter storage location code</string>
    <string name="storage_location_length">Storage location code should be 4 characters</string>
    <string name="bin_length">Bin code should be up to 10 characters</string>
    <string name="vendor_length">Vendor code should be 9 digits</string>
    <string name="quantity_empty">Enter quantity in BUoM</string>
    <string name="quantity_zero">Quantity cannot be zero</string>
    <string name="quantity_decimals_length">Up to 3 decimals allowed</string>
    <string name="quantity_integers_length">Up to 10 integers allowed</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_scanner">Scanner</string>

    <string name="pref_scan_technology_title">Scanning Technology</string>
    <string-array name="pref_scan_technology_titles">
        <item>DataWedge App</item>
        <item>ZXing App</item>
        <item>Google Vision Library</item>
        <item>ZBar Library</item>
        <item>ZXing Library</item>
    </string-array>
    <string-array name="pref_scan_technology_values">
        <item>DataWedge</item>
        <item>ZXing</item>
        <item>GoogleVision</item>
        <item>ZBarLib</item>
        <item>ZXingLib</item>
    </string-array>
    <string name="pref_header_defaults">Default Values</string>
    <string name="pref_timeout_title">Login Timeout</string>
    <string-array name="pref_timeout_values">
        <item>60000</item>
        <item>120000</item>
        <item>180000</item>
        <item>300000</item>
        <item>600000</item>
    </string-array>
    <string-array name="pref_timeout_titles">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
    </string-array>
    <string name="pref_not_selected">Not selected</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="text_work_order">Work Order</string>
    <string name="text_cost_center">Cost Center</string>
    <string name="text_material">Material</string>
    <string name="text_plant">Plant</string>
    <string name="text_storage_location">S.Loc.</string>
    <string name="text_bin">Storage Bin</string>
    <string name="text_inventory">Inventory Document</string>
    <string name="text_vendor">Vendor</string>
    <string name="text_quantity">Quantity in BUoM</string>

    <string name="user_name">User Name</string>
    <string name="login">Log In</string>

    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

</resources>
